# AllAbtCamCalib

./: .gitignore  README.md
CPP/: .AppleJucie.cc.swp  .AppleTree.h.swp  .VisualPath.h.swp  AppleJucie.cc  AppleJuice.cc  AppleTree.h  BA ---.cpp  BA free boundary.cpp  BA.cpp  CMakeLists.txt  Demo.cpp  Graycode.cpp  Refine.cpp  VisualPath.cpp  VisualPath.h  mocap_cam.xml
calib/: graycode.py  h600.csv  h900.csv  targets.py  v1440.csv  v800.csv
simulation/: TODO  board.py  cam-rzpi3.yaml  cam-x+0.1.yaml  cam-z-0.5.yaml  camera.py  debug.py  exp_util.py  experiment.py  imu.py  imu0.csv  kalibr_data.py  line_data.py  plot_imu.py  plot_pose_eric.py  report_3dn_0.0_2dn_0.5.txt  report_3dn_0.0_2dn_1.txt  report_3dn_0.0_2dn_2.txt  report_3dn_0_2dn_0.txt  robot_path.py  simple_data.py  test.py  test_board.py  test_camera.py  test_exp_util.py  test_funcs.py  test_imu.py  vis.py
simulation/data/: april_6x6.yaml  april_6x6_80x80cm.yaml  cam0.yaml  imu.yaml  imu_3dm_gx4_25_new.yaml  imu_loose.yaml
